crates/ars-i18n/tests/ui/translate_duplicate_locale.stderr
error: Translate duplicate locale `pt-BR`
 --> tests/ui/translate_duplicate_locale.rs:7:26
  |
7 |     #[translate(locale = "pt-BR", text = "Outro")]
  |                          ^^^^^^^
